--- a/styles/theme.css
+++ b/styles/theme.css
@@ -132,9 +132,9 @@
   .subtle-regular {
     @apply text-[10px] font-normal leading-[13px];
   }
-  .placeholder {
+  /* .placeholder {
     @apply placeholder:text-light-400 dark:placeholder:text-light-;
-  }
+  } */
   .invert-colors {
     @apply invert dark:invert-0;
   }
